...
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/createaccount"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create Account"
        android:onClick="ock"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="20sp"
        />
...
